--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "skillgo",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,7 +9,8 @@
     "dev:all": "concurrently \"npm run dev\" \"npm run dev:proxy\"",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:ai": "node test-ai-providers.js"
   },
   "dependencies": {
     "concurrently": "^9.2.1",
